<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_event_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_background"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Event Image -->
        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_menu_camera" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/white_card_background"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/uploadBannerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/upload_banner" />

            <Button
                android:id="@+id/removeBannerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/remove_banner"
                android:visibility="gone" /> <!-- Initially hidden -->
        </LinearLayout>


        <!-- White Card Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/white_card_background"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Event Title Input -->
            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_background"
                android:hint="@string/enter_title"
                android:padding="12dp"
                android:singleLine="true" />

            <!-- Description Input -->
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_background"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:padding="12dp"
                android:singleLine="true" />

            <!-- Event Date Button -->
            <Button
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_background"
                android:text="@string/select_event_date"
                android:textColor="@android:color/white" />

            <!-- Registration Buttons -->
            <Button
                android:id="@+id/registration_start_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_background"
                android:text="@string/select_registration_opening_date"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/registration_date_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_background"
                android:text="@string/select_registration_deadline_date"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/event_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_background"
                android:hint="Enter Event Capacity"
                android:inputType="number"
                android:padding="12dp"
                android:singleLine="true" />

            <!-- Capacity Limit Input -->
            <EditText
                android:id="@+id/limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_background"
                android:hint="Enter Waiting List Capacity (Optional)"
                android:inputType="number"
                android:padding="12dp"
                android:singleLine="true" />

            <!-- Fee Input -->
            <EditText
                android:id="@+id/feeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_background"
                android:hint="Enter Fee (Optional)"
                android:inputType="number"
                android:padding="12dp"
                android:singleLine="true" />

            <!-- Geolocation Checkbox -->
            <CheckBox
                android:id="@+id/geolocation_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Set Geolocation Requirement" />
        </LinearLayout>

        <!-- Save Event Button -->
        <Button
            android:id="@+id/save_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="Create Event"
            android:textColor="@android:color/white"
            app:icon="@drawable/baseline_check_24" />
    </LinearLayout>
</ScrollView>
