<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_background"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <!-- Event Image -->
        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Title"
                android:textAlignment="center"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Event Date"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Description Input -->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Description"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <!-- White Card Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/registration_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Registration Period: Registration Open - Registration Close"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/event_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Event Capacity: "
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <!-- Capacity Limit Input -->
            <TextView
                android:id="@+id/waiting_list_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Waiting List Capacity:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="visible" />

            <!-- Fee Input -->
            <TextView
                android:id="@+id/feeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Fee:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <!-- Geolocation Checkbox -->
            <TextView
                android:id="@+id/geolocation_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Geolocation Requirement: "
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:columnCount="2">

            <Button
                android:id="@+id/edit_event_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="Update\nEvent Banner"
                android:textSize="12sp"
                app:icon="@drawable/baseline_file_upload_24" />

            <Button
                android:id="@+id/qr_code_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="View\nQR CODE"
                android:textSize="12sp"
                app:icon="@drawable/baseline_qr_code_24" />

            <Button
                android:id="@+id/view_entrants_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/manage_entrants"
                android:textSize="12sp"
                app:icon="@drawable/baseline_person_search_24" />

            <Button
                android:id="@+id/delete_qr_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="Delete\nQR Code"
                android:textSize="12sp"
                app:icon="@drawable/baseline_remove_moderator_24" />

            <Button
                android:id="@+id/delete_event_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="Delete\nEvent"
                android:textSize="12sp"
                app:icon="@drawable/baseline_remove_moderator_24" />


        </GridLayout>

    </LinearLayout>
</ScrollView>
