<!-- res/layout/fragment_event_list.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Back Button -->


    <!-- RecyclerView for Event List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="?android:dividerVertical"
        android:dividerHeight="1dp"
        android:scrollbars="vertical" />

    <!-- Add Event Button -->
    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Add Event"
        app:icon="@drawable/baseline_post_add_24" />
</LinearLayout>
